refactor: Adicionar Builder pattern a entidades de domínio
- Introduz o padrão Builder para as entidades Cistern, SystemSettings, User e WaterDelivery. Esta mudança visa melhorar a legibilidade e a segurança na construção de objetos, simplificando a criação de instâncias.

- Os testes unitários foram refatorados para utilizar os novos builders, o que simplifica a configuração de objetos de teste e remove a necessidade de reflexão.

- Além disso, o método distributeWater em CisternService foi renomeado para fillCisterns para maior clareza de sua responsabilidade. O teste HydroFlowApplicationTests foi removido.